--- a/Milestone 2/SaintMDA21017.Rmd
+++ b/Milestone 2/SaintMDA21017.Rmd
@@ -164,8 +164,6 @@ cancer_sample %>%
 
 ```{r RQ2ST1}
 
-head(cancer_sample, n=2)
-colnames(cancer_sample)
 # In order to investigate if malognant (M) versus benign (B) tumours differ in their concavity, I wil compute the range, mean, standard deviation (SD), and median across the groups of sample diagnosis (M versus B)
 ## I will also leave the min and max values of concavity by sample diagnosis in (at end of the summary table), just to characterize the concavity range.
 
@@ -215,13 +213,13 @@ cancer_sample %>%
   annotate("text", x=0.161, y=15, label= "M mean = .161", colour = "darkgreen") +
     theme_bw()
   
-# This graph illustrates what the summary table I already made indicated about differences in variation and average in sample radii by whether the cancer was malignant or benign. It suggests that the answer to my first research question: "Do malignant versus benign tumours differ in their radius (radius_mean)? If so, by how much?" Is: Yes, malignant tumours have about 40% more radius versus benign ones. 
-17.46/12.14*100
+# This graph illustrates what the summary table I already made indicated about differences in sample concavity by whether the cancer was malignant or benign. It suggests that the answer to my second research question: "Do malignant versus benign tumours differ in their concavity (concavity_mean)? If so, by how much?" Is: Yes, malignant tumours have on average a mean concavity 300% greater than that of benign tumours. 
+0.161/0.046*100
 
 
 ## References:
-# [1] Gnueghoidune (2022) on Stalk overflow provided syntax that was the basis / ispiration for adding the correct (grouped - not overall) mean of radius by sample diagnosis (https://stackoverflow.com/questions/71742365/how-do-i-add-a-mean-line-to-each-panel-is-a-facet-grid-object) 
-# [2] Statology (n.d.) https://www.statology.org/add-text-to-ggplot/, for labelling radii means by group
+# [1] Gnueghoidune (2022) on Stalk overflow  (https://stackoverflow.com/questions/71742365/how-do-i-add-a-mean-line-to-each-panel-is-a-facet-grid-object) 
+# [2] Statology (n.d.) https://www.statology.org/add-text-to-ggplot/, for labelling 
   
 ```
 ### Research Question 3 (RQ3)
@@ -249,7 +247,7 @@ cancer_sample %>%
 
 head(cancer_sample, n=2)
 
-# The following is really another way of plotting the same variables as the first & second graphing exercises, however since here (in research question 3) I am interested in analyses where diagnosis is the dependant variable, I will plot diagnosis over radii and concavity (rather than radii distribution & concavity distribution by diagnosis as in the first + second graphs created).
+# The following is really another way of plotting the same variables as the first & second graphing exercises, however since here (in research question 3) I am interested in analyses where diagnosis is the dependent variable, I will plot diagnosis over radii and concavity (rather than radii distribution & concavity distribution by diagnosis as in the first + second graphs created).
 
 cancer_sample %>% 
   mutate(diagnosis_full = ifelse(diagnosis=="M", "Malignant", "Benign")) %>% 
@@ -339,7 +337,7 @@ Based on the operations that you've completed, how much closer are you to answer
 
 <!------------------------- Write your answer here ---------------------------->
 
-I think I am much closer to ansering my research questions! Regarding 1 & 2 (do cancer sample raddi (Q1) and concavity (Q2) differ between malignant and benign tumours?): The histograms and between-group means seem to say yes! I could formally test this, but I am more interested in whether I can use these metrics to predict sample diagnosis (Q3). I can refine that question by asking both 'can cancer radius and concavity be used to predict diagnosis' <with> 'if so, by how much?'. 
+I think I am much closer to answering my research questions! Regarding 1 & 2 (do cancer sample raddi (Q1) and concavity (Q2) differ between malignant and benign tumors?): The histograms and between-group means seem to say yes! I could formally test this, but I am more interested in whether I can use these metrics to predict sample diagnosis (Q3). I can refine that question by asking both 'can cancer radius and concavity be used to predict diagnosis' <with> 'if so, by how much?'. 
 My last question (Q4; 'are radius and concavity related, within both benign and malignat tumours?') is a little bit more clear - figure X shows an overall positive trend in cancer radii by concavity, but figure Z suggests that this might not be true for benign tumours (yeilds interesting results). I can clarify the Q4 answer by formally testing the correlation between radii and concavity both across sample diagnosis and between diagnoses. I might want to refine the question by also asking 'how much does the radii-concavity correlation differ between benign and malignant tumours?'
 
 <!----------------------------------------------------------------------------->
@@ -367,7 +365,7 @@ print(cancer_sample[1:8], n=10) # look at the first 8 variables in data set and 
 # It looks tidy to me
 
 
-# I think I alreddy confirms that no duplicate sample IDs exist in this set, but let's confirm before I conclude my data are tidy
+# I think I already confirmed that no duplicate sample IDs exist in this set, but let's confirm before I conclude my data are tidy
 nrow(cancer_sample) - n_distinct(cancer_sample$ID) # good - each row is it's own observation
 
 # each column is a variable and each cell is a value - data are tidy
@@ -448,9 +446,9 @@ Explain your decision for choosing the above two research questions.
 
 <!--------------------------- Start your work below --------------------------->
 I basically answered the other two questions already above ("are cancer (1) radii and concavity (2) different between malignant and benign cancer samples (it seems like yes, for both). As explained in 1.2 of this assignment:
- 'I could formally test this, but I am more interested in whether I can use these metrics to predict sample diagnosis (Q3).' - this seems like a more interesting model (because the outcome is binary == M or B) - and, if these analyses were not strictly for pedagodical purposes, a more useful (as in clinicaly) question 
+ 'I could formally test this, but I am more interested in whether I can use these metrics to predict sample diagnosis (Q3).' - this seems like a more interesting model (because the outcome is binary == M or B) - and, if these analyses were not strictly for pedagogical purposes, a more useful (as in clinically) question. 
  
-And I also want to examine Q4 becuase, based on fig x and fig z, we may have a relationship between radius and concavity that exists only in one level of sample diagnoses, which is of interest to me; As explained in 1.2 of this assignment: 
+I also want to examine Q4 becuase, based on fig x and fig z, we may have a relationship between radius and concavity that exists only in one level of sample diagnoses, which is of interest to me; As explained in 1.2 of this assignment: 
 'figure X shows an overall positive trend in cancer radii by concavity, but figure Z suggests that this might not be true for benign tumours [...] I can clarify the Q4 answer by formally testing the correlation between radii and concavity both across sample diagnosis and between diagnoses.'
 <!----------------------------------------------------------------------------->
 
@@ -521,7 +519,7 @@ LogitModel_diag_by_radconc <- glm(diagnosis_bin ~ radius_mean + concavity_mean, 
 
 broom::tidy(LogitModel_diag_by_radconc)
 
-# Below is the summary for my logistic regression model, notably the p.vals for each estimate for radius and concavity (ps<<.05) indicate that both radius and concavity independantly and signdificantly predict tumour diagnosis. # we can interpret them below..
+# Below is the summary for my logistic regression model, notably the p.vals for each estimate for radius and concavity (ps<<.05) indicate that both radius and concavity independently and significantly predict tumour diagnosis. # we can interpret them below..
 
 ```
 <!----------------------------------------------------------------------------->
@@ -541,7 +539,7 @@ Produce something relevant from your fitted model: either predictions on Y, or a
 # overall: I am going to produce the odds ratios for malignant diagnoses for radius and concavity using broom's 'tidy' # see below.
 
 
-# The model I secified is a logistic regression model - the regression estimates correspond to the change in LOG odds of receiving a malignant diagnosis (coded as 1) with each one unit change in our preditors (radii and concavity) - we take the exponential of the coefficients by specifying exp=TRUE when calling broom's "tidy" # -- this yeilds odds ratios for a malignant diagnosis associated with each predictor. 
+# The model I specified is a logistic regression model - the regression estimates correspond to the change in LOG odds of receiving a malignant diagnosis (coded as 1) with each one unit change in our predictors (radii and concavity) - we take the exponential of the coefficients by specifying exp=TRUE when calling broom's "tidy" # -- this yields odds ratios for a malignant diagnosis associated with each predictor. 
 
 broom::tidy(LogitModel_diag_by_radconc, exp=TRUE, 
             #let's also call the confindence intervals at 95% confidence:
@@ -550,9 +548,9 @@ broom::tidy(LogitModel_diag_by_radconc, exp=TRUE,
 
 ```
 
-
+### Principally for clarity / to answer the research question:
 ```{r AnswerQuestions}
-###### For clarity / answering the research question ###### :
+###### For clarity / answering the research question ###### (I am not sure if this is a requisite part of the assignment)
 # let's make the output a nicer table...
 tib_broomoutputMOD <- as_tibble(broom::tidy(LogitModel_diag_by_radconc, exp=TRUE, conf.int=TRUE, conf.level=0.95))
 # Table created just below ('tib_broomoutputMOD') is written to 'output' subfolder in later command (***for task 4.1)
@@ -636,7 +634,7 @@ here()
 saveRDS(LogitModel_diag_by_radconc, here("output", "Sidneys_LogitRegrsMod_diagbyRadConc.rds"))
 Logit_Model_Copy_Reread <- readRDS(here("output", "Sidneys_LogitRegrsMod_diagbyRadConc.rds"))
 
-# Stack the original and re-read model outputs on top of each other to confirm that they are the same (the output will be a double 6x7 table with rows 2-4 identical to rows 5-7)
+# Stack the original and re-read model outputs on top of each other to confirm that they are the same (the output will be a double 6x7 table with rows 1-3 identical to rows 4-6)
 rbind(broom::tidy(Logit_Model_Copy_Reread, exp=TRUE, conf.int=TRUE, conf.level=0.95), broom::tidy(LogitModel_diag_by_radconc, exp=TRUE, conf.int=TRUE, conf.level=0.95))
 
 ```
@@ -680,7 +678,7 @@ You've tagged a release for Milestone 2.
 
 Thanks to Victor Yuan for mostly putting this together.
 
-### Sidney's References for syntax/tricks:
+### Sidney's References:
 ```{r references} 
 #[1] Gnueghoidune (2022).https://stackoverflow.com/questions/71742365/how-do-i-add-a-mean-line-to-each-panel-is-a-facet-grid-object
 #[2] Statology (n.d.) https://www.statology.org/add-text-to-ggplot/
